# AI-Data-Analyst

./: README.md  pyproject.toml  requirements.txt
autonomous_analyst/: __init__.py  config.py  main.py
autonomous_analyst/agent/: __init__.py  agent_builder.py  prompts.py  tools.py
autonomous_analyst/ml/: evaluator.py  trainer.py
autonomous_analyst/utils/: __init__.py  data_loader.py  plotting.py  validation.py
